Completed bios for Garwood, Stewart, Embleton, West. Copied and pasted format to others up to Leatherman

--- a/Bios/Embleton.html
+++ b/Bios/Embleton.html
@@ -66,28 +66,52 @@
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
-              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
-              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
+              <li><a href="https://www.alexembleton.com" target="_blank" class="green-link">https://www.alexembleton.com</a></li>
+              <li><a href="https://www.instagram.com/alex_embleton1/" target="_blank" class="green-link">Instagram: @alex_embleton1</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
-              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
-              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <li>I was born in Turkey and lived there until I was 8. We moved around a lot growing up, and that made it so I had to be entertained with just paper and pencil. That's how I became obsessed with drawing.</li> <br>
 
-              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Senior quote:</b><br>
+              "I'm not dumb, I just have a grasp of thoroughly useless information" - Bill Watterson</li> <br>
 
-              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+              <li><b>Why did you choose VCD?</b><br>
+              It marries artistry with problem solving, order, and logic.</li> <br>
 
-              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>What inspired you to be a graphic designer?</b><br>
+              The moment I learned that almost everything I interacted with had to be thought up and designed by someone.</li><br>
 
-              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+              <li><b>Favorite keyboard shortcut:</b><br>
+              [ or ] to change brush size.</li><br>
 
-              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Worst VCD moment:</b><br>
+              I lost my 1 TB hard with all my old files drive for about a week and a half. I thought I had lost 3 years of work.</li><br>
 
-              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
+              <li><b>Best VCD moment:</b><br>
+              Staying up till 2 AM making a completely inconsequential Graphic Design Research group presentation because we making each other laugh so much.</li><br>
+
+              <li><b>What inspires you the most?</b><br>
+              Adam Savage videos</li><br>
+
+              <li><b>Goals in 5 years:</b><br>
+              To be supporting myself on comics and illustrations somewhere that's not Ohio.</li><br>
+
+              <li><b>What job would you be terrible at?</b><br>
+              Accounting</li><br>
+
+              <li><b>What is your #1 pet peeve?</b><br>
+              When people don't press clear on the microwave and I look up to check the time but it just says "00:02"</li><br>
+
+              <li><b>What song do you have completely memorized?</b><br>
+              La Di Da Di by Slick Rick</li><br>
+
+              <li><b>What movie title best describes your life?</b><br>
+              Dazed and Confused</li><br>
+
+              <li><b>What’s the best compliment you’ve ever received?</b><br>
+              Being told "You've got something special here." by Christopher Darling about one of my illustrations </li><br>
             </ul>
 
           </div>
