--- a/Bios/Sabistina.html
+++ b/Bios/Sabistina.html
@@ -61,34 +61,64 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Illustration</li>
-            </ul>
+              <h1 class="no-top-padding">Focus</h1>
+              <ul>
+                <li>Branding, typography, digital design</li>
+              </ul>
 
-            <h1 class="no-top-padding no-bot-padding">Connect</h1>
-            <ul>
-              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
-              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
-              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
-            </ul>
+              <h1 class="no-top-padding no-bot-padding">Connect</h1>
+              <ul>
+                <li><a href="https://betsygarwood.wixsite.com/betsygenevieve" target="_blank" class="green-link">https://betsygarwood.wixsite.com/betsygenevieve</a></li>
+                <li><a href="https://www.instagram.com/betsygenevieve/" target="_blank" class="green-link">Instagram: @betsygenevieve</a></li>
+                <li><a href="https://twitter.com/betgenwood" target="_blank" class="green-link">Twitter: @betgenwood</a></li>
+              </ul>
 
-            <h1 class="no-top-padding">About Me</h1>
-            <ul>
-              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
-              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
-              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <h1 class="no-top-padding">About Me</h1>
+              <ul>
+                <li>I am originally from Youngstown, Ohio. When I am not dedicating my life to design, I enjoy film, online shopping my soul away, and watching Vine threads on Twitter. I aspire to have a design job in a fashion/beauty related field. When I'm not busy doing school projects, I am busy being a brand representative for Glossier and Rent The Runway. I also love my three cats, watching random videos on Youtube, and my daily cold brew coffee. You probably will not see me without an iced coffee in my hand. </li> <br>
 
-              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+                <li><b>Senior quote:</b><br>
+                "I did my best, and my best is good enough" -Hannah Beachler </li> <br>
 
-              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+                <li><b>Why did you choose VCD?</b><br>
+                I wanted to challenge myself, knowing how hard the fundamental courses were.</li> <br>
 
-              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+                <li><b>What inspired you to be a graphic designer?</b><br>
+                Design is a platform that we, as creatives, have a voice. We can create with purpose. That to me, is more important than absolutely anything. Creating a story with your design is not just for the cool design pitch. You get to see your clients story come to life. Whether that be in a website design, logo design or simply a t-shirt design. Design for reason; for passion.</li><br>
 
-              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+                <li><b>Favorite keyboard shortcut:</b><br>
+                Command+Z</li><br>
 
-              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+                <li><b>Worst VCD moment:</b><br>
+                Staying up till 5 am to redo the point, line, plane project.</li><br>
 
-              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
-            </ul>
+                <li><b>Best VCD moment:</b><br>
+                I was a freshman and I got an A on my first project, the square drawing exercise.</li><br>
+
+                <li><b>What inspires you the most?</b><br>
+                My family. Without a doubt.</li><br>
+
+                <li><b>Goals in 5 years:</b><br>
+                My goal is to be living in New York, working for an amazing fashion or beauty brand.</li><br>
+
+                <li><b>What job would you be terrible at?</b><br>
+                Accountant, I hate numbers, worst enemy.</li><br>
+
+                <li><b>What is your #1 pet peeve?</b><br>
+                When people talk over top of one another. </li><br>
+
+                <li><b>What song do you have completely memorized?</b><br>
+                Get Up 10 by Cardi B</li><br>
+
+                <li><b>What movie title best describes your life?</b><br>
+                Pursuit Of Happiness</li><br>
+
+                <li><b>What is the luckiest thing that has ever happened to you?</b><br>
+                I flipped a penny that was tails over to heads so someone else found a penny heads up and then I got a call from a make up brand and they flew me out to do a campaign photoshoot with them in New York City.</li><br>
+
+                <li><b>What’s the best compliment you’ve ever received?</b><br>
+                I am the most genuine soul someone has ever met.</li><br>
+              </ul>
 
           </div>
         </div>
