--- a/Bios/Stewart.html
+++ b/Bios/Stewart.html
@@ -61,34 +61,62 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Illustration</li>
+              <li>Branding, web development</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
-              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
-              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
+              <li><a href="https://jordanstewartdesign.com" target="_blank" class="green-link">https://jordanstewartdesign.com</a></li>
+              <li><a href="https://www.instagram.com/jordan_stewart/" target="_blank" class="green-link">Instagram: @jordan_stewart</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
-              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
-              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <li>I am a graphic designer, but sometimes I cheat on graphic design for UX design. Some of my hobbies include road and mountain biking, hiking and anything outside. </li> <br>
 
-              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Senior quote:</b><br>
+              After this project I'm never pulling an all nighter ever again.</li> <br>
 
-              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+              <li><b>Why did you choose VCD?</b><br>
+              I was taking a class on photoshop at Elyria High School my senior year and it seemed like it would be an enjoyable career. It turned out to be true.</li> <br>
 
-              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>What inspired you to be a graphic designer?</b><br>
+              My mom was an art teacher and I was always around different tools and materials. She always let my siblings and I be creative which made me want to make things.</li><br>
 
-              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+              <li><b>Favorite keyboard shortcut:</b><br>
+              Command + z</li><br>
 
-              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Worst VCD moment:</b><br>
+            That time my last semester I had mono (Yes, still happening).</li><br>
 
-              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
+              <li><b>Best VCD moment:</b><br>
+              Turning in that Intro to VCD Studio rectangle exercise.</li><br>
+
+              <li><b>What inspires you the most?</b><br>
+              The outdoors</li><br>
+
+              <li><b>Goals in 5 years:</b><br>
+              I hope to be living, working and enjoying life around Cleveland with the people that I love.</li><br>
+
+              <li><b>What job would you be terrible at?</b><br>
+              Anything STEM related.</li><br>
+
+              <li><b>What is your #1 pet peeve?</b><br>
+              When Adobe CC icons bounce at the bottom of the screen instead of opening.</li><br>
+
+              <li><b>What song do you have completely memorized?</b><br>
+              Happy Birthday</li><br>
+
+              <li><b>What movie title best describes your life?</b><br>
+              Napoleon Dynamite</li><br>
+
+              <li><b>What is the luckiest thing that has ever happened to you?</b><br>
+              I don't believe in luck.</li><br>
+
+              <li><b>What’s the best compliment you’ve ever received?</b><br>
+              When people offer money in exchange for my work.</li><br>
             </ul>
+
 
           </div>
         </div>
