--- a/Bios/West.html
+++ b/Bios/West.html
@@ -60,33 +60,56 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Illustration</li>
+              <li>Typography</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
-              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
-              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
+              <li><a href="https://annecwest.myportfolio.com/" target="_blank" class="green-link">https://annecwest.myportfolio.com/</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
-              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
-              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <li>I am a creative mind who loves exploring new designs and view points. I find value in friends, family, and art. Im at my happiest when I have a laid back day spending time with the people I love while exploring new areas. </li> <br>
 
-              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Senior quote:</b><br>
+              None of my assignments are done but I sure am.</li> <br>
 
-              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+              <li><b>Why did you choose VCD?</b><br>
+              I chose VCD because I wanted to be in a creative or communication field. When I found out I could do both I knew VCD was a perfect major for me. </li> <br>
 
-              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>What inspired you to be a graphic designer?</b><br>
+              My high school art teacher inspired me to be a graphic designer. She explained to me what the program at Kent was like and thought it would be fitting for me. Without her I never would have known about graphic design being a potential career. </li><br>
 
-              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+              <li><b>Favorite keyboard shortcut:</b><br>
+              Command+Z</li><br>
 
-              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Worst VCD moment:</b><br>
+              Photography projects</li><br>
 
-              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
+              <li><b>Best VCD moment:</b><br>
+              Passing Sophomore Review</li><br>
+
+              <li><b>What inspires you the most?</b><br>
+              Going outside or asking friends or classmates for advice. Normally different perspectives or people inspire me with new insight. </li><br>
+
+              <li><b>Goals in 5 years:</b><br>
+              My goal in 5 years is to own a home, live in a city that I love, and be happy in my career. </li><br>
+
+              <li><b>What job would you be terrible at?</b><br>
+              Anything medical </li><br>
+
+              <li><b>What is your #1 pet peeve?</b><br>
+              People who walk slowly or stop suddenly in the middle of the sidewalk.</li><br>
+
+              <li><b>What song do you have completely memorized?</b><br>
+              Super Bass - Nicki Minaj</li><br>
+
+              <li><b>What movie title best describes your life?</b><br>
+              That Awkward Moment</li><br>
+
+              <li><b>What’s the best compliment you’ve ever received?</b><br>
+              That I am a really good listener, and a loyal friend.  </li><br>
             </ul>
 
           </div>
