Sabistina and Stephens bios

--- a/Bios/Stephens.html
+++ b/Bios/Stephens.html
@@ -61,61 +61,55 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Branding, typography, digital design</li>
+              <li>Branding and packaging</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="https://betsygarwood.wixsite.com/betsygenevieve" target="_blank" class="green-link">https://betsygarwood.wixsite.com/betsygenevieve</a></li>
-              <li><a href="https://www.instagram.com/betsygenevieve/" target="_blank" class="green-link">Instagram: @betsygenevieve</a></li>
-              <li><a href="https://twitter.com/betgenwood" target="_blank" class="green-link">Twitter: @betgenwood</a></li>
+              <li><a href="http://jomackdesign.com/" target="_blank" class="green-link">http://jomackdesign.com/</a></li>
+              <li><a href="https://www.instagram.com/jojo216612/" target="_blank" class="green-link">Instagram: @jojo216612</a></li>
+              <li><a href="https://twitter.com/jordymack14" target="_blank" class="green-link">Twitter: @jordymack14</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li>I am originally from Youngstown, Ohio. When I am not dedicating my life to design, I enjoy film, online shopping my soul away, and watching Vine threads on Twitter. I aspire to have a design job in a fashion/beauty related field. When I'm not busy doing school projects, I am busy being a brand representative for Glossier and Rent The Runway. I also love my three cats, watching random videos on Youtube, and my daily cold brew coffee. You probably will not see me without an iced coffee in my hand. </li> <br>
+              <li>A quiet and reserved designer who expresses herself through her work and loves volleyball!</li> <br>
 
               <li><b>Senior quote:</b><br>
-              "I did my best, and my best is good enough" -Hannah Beachler </li> <br>
+              Persevere and you will succeed</li> <br>
 
               <li><b>Why did you choose VCD?</b><br>
-              I wanted to challenge myself, knowing how hard the fundamental courses were.</li> <br>
+              To be able to express myself through design in an ever-changing world.</li> <br>
 
               <li><b>What inspired you to be a graphic designer?</b><br>
-              Design is a platform that we, as creatives, have a voice. We can create with purpose. That to me, is more important than absolutely anything. Creating a story with your design is not just for the cool design pitch. You get to see your clients story come to life. Whether that be in a website design, logo design or simply a t-shirt design. Design for reason; for passion.</li><br>
+              The fact that graphic design shapes our world in ways that people don't realize.</li><br>
 
               <li><b>Favorite keyboard shortcut:</b><br>
               Command+Z</li><br>
 
               <li><b>Worst VCD moment:</b><br>
-              Staying up till 5 am to redo the point, line, plane project.</li><br>
+              Sophomore Review</li><br>
 
               <li><b>Best VCD moment:</b><br>
-              I was a freshman and I got an A on my first project, the square drawing exercise.</li><br>
+              BFA Show</li><br>
 
               <li><b>What inspires you the most?</b><br>
-              My family. Without a doubt.</li><br>
+              Success</li><br>
 
               <li><b>Goals in 5 years:</b><br>
-              My goal is to be living in New York, working for an amazing fashion or beauty brand.</li><br>
+              Be an established designer in North Carolina with my family.</li><br>
 
               <li><b>What job would you be terrible at?</b><br>
-              Accountant, I hate numbers, worst enemy.</li><br>
+              An illustrator</li><br>
 
               <li><b>What is your #1 pet peeve?</b><br>
-              When people talk over top of one another. </li><br>
+              People chewing gum obnoxiously </li><br>
 
               <li><b>What song do you have completely memorized?</b><br>
-              Get Up 10 by Cardi B</li><br>
-
-              <li><b>What movie title best describes your life?</b><br>
-              Pursuit Of Happiness</li><br>
-
-              <li><b>What is the luckiest thing that has ever happened to you?</b><br>
-              I flipped a penny that was tails over to heads so someone else found a penny heads up and then I got a call from a make up brand and they flew me out to do a campaign photoshoot with them in New York City.</li><br>
+              Dying in LA by Panic at the Disco!</li><br>
 
               <li><b>What’s the best compliment you’ve ever received?</b><br>
-              I am the most genuine soul someone has ever met.</li><br>
+              I have a nice smile.</li><br>
             </ul>
 
           </div>
