--- a/Bios/Dotterer.html
+++ b/Bios/Dotterer.html
@@ -61,61 +61,53 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Branding, typography, digital design</li>
+              <li>Print and Web Design</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="https://betsygarwood.wixsite.com/betsygenevieve" target="_blank" class="green-link">https://betsygarwood.wixsite.com/betsygenevieve</a></li>
-              <li><a href="https://www.instagram.com/betsygenevieve/" target="_blank" class="green-link">Instagram: @betsygenevieve</a></li>
-              <li><a href="https://twitter.com/betgenwood" target="_blank" class="green-link">Twitter: @betgenwood</a></li>
+              <li><a href="https://carmenleedott.wixsite.com/selectedworks" target="_blank" class="green-link">https://carmenleedott.wixsite.com/selectedworks</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li>I am originally from Youngstown, Ohio. When I am not dedicating my life to design, I enjoy film, online shopping my soul away, and watching Vine threads on Twitter. I aspire to have a design job in a fashion/beauty related field. When I'm not busy doing school projects, I am busy being a brand representative for Glossier and Rent The Runway. I also love my three cats, watching random videos on Youtube, and my daily cold brew coffee. You probably will not see me without an iced coffee in my hand. </li> <br>
+              <li>I'm a passionate designer and person, who loves cats and tiny plants, and trying new things, especially food. I really enjoy print and web design, and also really appreciate interior design and fashion design.</li> <br>
 
               <li><b>Senior quote:</b><br>
-              "I did my best, and my best is good enough" -Hannah Beachler </li> <br>
+              “It’s through mistakes that you actually can grow. You have to get bad in order to get good.” -Paula Scher</li> <br>
 
               <li><b>Why did you choose VCD?</b><br>
-              I wanted to challenge myself, knowing how hard the fundamental courses were.</li> <br>
+              It was this or getting a law degree... I think I chose wisely. For real though, I just really enjoy using creativity to solve design problems and the entire creative process that it entails.</li> <br>
 
               <li><b>What inspired you to be a graphic designer?</b><br>
-              Design is a platform that we, as creatives, have a voice. We can create with purpose. That to me, is more important than absolutely anything. Creating a story with your design is not just for the cool design pitch. You get to see your clients story come to life. Whether that be in a website design, logo design or simply a t-shirt design. Design for reason; for passion.</li><br>
+              I was always artistic since I was young, and as I've moved further in my career, I've found more passion and motivation in the fact that I am a essentially creating designs that can reach a huge audience, and I can decide what I want them to take away from my design.</li><br>
 
               <li><b>Favorite keyboard shortcut:</b><br>
-              Command+Z</li><br>
+              Command + S (has saved me during some tragic program crashes)</li><br>
 
               <li><b>Worst VCD moment:</b><br>
-              Staying up till 5 am to redo the point, line, plane project.</li><br>
+              Having my professor like my idea but basically tell me to redo everything.</li><br>
 
               <li><b>Best VCD moment:</b><br>
-              I was a freshman and I got an A on my first project, the square drawing exercise.</li><br>
+              Turning in a project after toiling away at it for so long.</li><br>
 
               <li><b>What inspires you the most?</b><br>
-              My family. Without a doubt.</li><br>
+              Great design when I see it where I don't expect.</li><br>
 
               <li><b>Goals in 5 years:</b><br>
-              My goal is to be living in New York, working for an amazing fashion or beauty brand.</li><br>
+              To grow as a designer and be happy in my current job.</li><br>
 
               <li><b>What job would you be terrible at?</b><br>
-              Accountant, I hate numbers, worst enemy.</li><br>
+              Any kind of pastry chef, because I wouldn't have the self control not to try everything I made.</li><br>
 
               <li><b>What is your #1 pet peeve?</b><br>
               When people talk over top of one another. </li><br>
 
-              <li><b>What song do you have completely memorized?</b><br>
-              Get Up 10 by Cardi B</li><br>
-
-              <li><b>What movie title best describes your life?</b><br>
-              Pursuit Of Happiness</li><br>
-
               <li><b>What is the luckiest thing that has ever happened to you?</b><br>
-              I flipped a penny that was tails over to heads so someone else found a penny heads up and then I got a call from a make up brand and they flew me out to do a campaign photoshoot with them in New York City.</li><br>
+              Finding a job already, before I've graduated.</li><br>
 
               <li><b>What’s the best compliment you’ve ever received?</b><br>
-              I am the most genuine soul someone has ever met.</li><br>
+              Being told I'm easy to talk to.</li><br>
             </ul>
           </div>
         </div>
