--- a/Bios/Kidd.html
+++ b/Bios/Kidd.html
@@ -61,61 +61,57 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Branding, typography, digital design</li>
+              <li>Branding/typography</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="https://betsygarwood.wixsite.com/betsygenevieve" target="_blank" class="green-link">https://betsygarwood.wixsite.com/betsygenevieve</a></li>
-              <li><a href="https://www.instagram.com/betsygenevieve/" target="_blank" class="green-link">Instagram: @betsygenevieve</a></li>
-              <li><a href="https://twitter.com/betgenwood" target="_blank" class="green-link">Twitter: @betgenwood</a></li>
+              <li><a href="https://madeleinekidd.com/" target="_blank" class="green-link">https://madeleinekidd.com/</a></li>
+              <li><a href="https://www.instagram.com/madeleine_kidd/" target="_blank" class="green-link">Instagram: @madeleine_kidd</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li>I am originally from Youngstown, Ohio. When I am not dedicating my life to design, I enjoy film, online shopping my soul away, and watching Vine threads on Twitter. I aspire to have a design job in a fashion/beauty related field. When I'm not busy doing school projects, I am busy being a brand representative for Glossier and Rent The Runway. I also love my three cats, watching random videos on Youtube, and my daily cold brew coffee. You probably will not see me without an iced coffee in my hand. </li> <br>
+              <li>Madeleine is a branding and typography designer from northeast Ohio. She hopes to move to New York City within the next couple of years but is keeping her options open. Madeleine spends most of her time staring at her computer screen, wishing she had blue light glasses and thinking of her adorable pup Zoey. </li> <br>
 
               <li><b>Senior quote:</b><br>
-              "I did my best, and my best is good enough" -Hannah Beachler </li> <br>
+              Please hire me.</li> <br>
 
               <li><b>Why did you choose VCD?</b><br>
-              I wanted to challenge myself, knowing how hard the fundamental courses were.</li> <br>
+              I came to Kent as a fashion student and quickly realized 1) I didn't fit into that mold and 2) I was pretty damn good in illustrator. So the switch was made. </li> <br>
 
               <li><b>What inspired you to be a graphic designer?</b><br>
-              Design is a platform that we, as creatives, have a voice. We can create with purpose. That to me, is more important than absolutely anything. Creating a story with your design is not just for the cool design pitch. You get to see your clients story come to life. Whether that be in a website design, logo design or simply a t-shirt design. Design for reason; for passion.</li><br>
+              In elementary school, I always said I wanted to be an art teacher because when you're young your mind is filled with so many crazy ideas and kids are constantly crafting and creating the most unique things. As I got older I found that design is a way to give purpose to crafting and creativity and make things happen. </li><br>
 
               <li><b>Favorite keyboard shortcut:</b><br>
-              Command+Z</li><br>
+              Option–command–c. Keep those text boxes short and clean.</li><br>
 
               <li><b>Worst VCD moment:</b><br>
-              Staying up till 5 am to redo the point, line, plane project.</li><br>
+              Dropping an E-XACO knife and it falling directly into my friends foot. </li><br>
 
               <li><b>Best VCD moment:</b><br>
-              I was a freshman and I got an A on my first project, the square drawing exercise.</li><br>
+              This! Graduating is by far the best.</li><br>
 
               <li><b>What inspires you the most?</b><br>
-              My family. Without a doubt.</li><br>
+              Making my friends and family proud. But more importantly myself.</li><br>
 
               <li><b>Goals in 5 years:</b><br>
-              My goal is to be living in New York, working for an amazing fashion or beauty brand.</li><br>
+              In 5 years I hope to be living in a city at the peak of my career, working for a branding agency. I'll be happy!</li><br>
 
               <li><b>What job would you be terrible at?</b><br>
-              Accountant, I hate numbers, worst enemy.</li><br>
+              Selling hot dogs.</li><br>
 
               <li><b>What is your #1 pet peeve?</b><br>
-              When people talk over top of one another. </li><br>
+              WUnopened emails. You know who you are. </li><br>
 
               <li><b>What song do you have completely memorized?</b><br>
-              Get Up 10 by Cardi B</li><br>
+              Anything off of my Monday Blues playlist.</li><br>
 
               <li><b>What movie title best describes your life?</b><br>
-              Pursuit Of Happiness</li><br>
-
-              <li><b>What is the luckiest thing that has ever happened to you?</b><br>
-              I flipped a penny that was tails over to heads so someone else found a penny heads up and then I got a call from a make up brand and they flew me out to do a campaign photoshoot with them in New York City.</li><br>
+              Cloudy with a Chance of Meatballs</li><br>
 
               <li><b>What’s the best compliment you’ve ever received?</b><br>
-              I am the most genuine soul someone has ever met.</li><br>
+              You have a nose like a cartoon character.</li><br>
             </ul>
 
           </div>
