--- a/Bios/Tran.html
+++ b/Bios/Tran.html
@@ -61,61 +61,42 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Branding, typography, digital design</li>
+              <li>Motion design</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="https://betsygarwood.wixsite.com/betsygenevieve" target="_blank" class="green-link">https://betsygarwood.wixsite.com/betsygenevieve</a></li>
-              <li><a href="https://www.instagram.com/betsygenevieve/" target="_blank" class="green-link">Instagram: @betsygenevieve</a></li>
-              <li><a href="https://twitter.com/betgenwood" target="_blank" class="green-link">Twitter: @betgenwood</a></li>
+              <li><a href="http://briantran.myportfolio.com" target="_blank" class="green-link">http://briantran.myportfolio.com</a></li>
+              <li><a href="https://www.instagram.com/brian_tran.gif/" target="_blank" class="green-link">Instagram: @brian_tran.gif</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li>I am originally from Youngstown, Ohio. When I am not dedicating my life to design, I enjoy film, online shopping my soul away, and watching Vine threads on Twitter. I aspire to have a design job in a fashion/beauty related field. When I'm not busy doing school projects, I am busy being a brand representative for Glossier and Rent The Runway. I also love my three cats, watching random videos on Youtube, and my daily cold brew coffee. You probably will not see me without an iced coffee in my hand. </li> <br>
+              <li>I’m a designer who specializes in motion. I love finding ways to mix mediums and combine design, illustration and animation—there just isn’t enough time to explore everything.</li> <br>
 
               <li><b>Senior quote:</b><br>
-              "I did my best, and my best is good enough" -Hannah Beachler </li> <br>
+              All work and no play makes a good GPA.</li> <br>
 
               <li><b>Why did you choose VCD?</b><br>
-              I wanted to challenge myself, knowing how hard the fundamental courses were.</li> <br>
+              After making an animated typography video instead of a slideshow for a final in my freshman year of high school, I knew I wanted to pursue some form of visual communication without limiting myself to the stereotypical “graphic designer” role. Kent State wasn’t too far from home, and I had heard its design program wasn’t to be underestimated. I'm glad I made that choice.</li> <br>
 
               <li><b>What inspired you to be a graphic designer?</b><br>
-              Design is a platform that we, as creatives, have a voice. We can create with purpose. That to me, is more important than absolutely anything. Creating a story with your design is not just for the cool design pitch. You get to see your clients story come to life. Whether that be in a website design, logo design or simply a t-shirt design. Design for reason; for passion.</li><br>
+              I was always fascinated by graphics and movement throughout my middle school and high school years, and wanted to be making that for a living. Although some things have changed since then, I still feel that desire and am thankful to have figured out my calling so early on.</li><br>
 
               <li><b>Favorite keyboard shortcut:</b><br>
-              Command+Z</li><br>
+              Command + S, every 5 seconds.</li><br>
 
               <li><b>Worst VCD moment:</b><br>
-              Staying up till 5 am to redo the point, line, plane project.</li><br>
+              Spilling a can of gold ink with a friend in Type High.</li><br>
 
               <li><b>Best VCD moment:</b><br>
-              I was a freshman and I got an A on my first project, the square drawing exercise.</li><br>
+              Receiving a student show award after being rejected the previous year.</li><br>
 
               <li><b>What inspires you the most?</b><br>
-              My family. Without a doubt.</li><br>
+              Seeing the incredible and diverse work that today’s designers, illustrators, and animators are doing. I’m kind of a child and want to be doing some of everything.</li><br>
 
               <li><b>Goals in 5 years:</b><br>
-              My goal is to be living in New York, working for an amazing fashion or beauty brand.</li><br>
-
-              <li><b>What job would you be terrible at?</b><br>
-              Accountant, I hate numbers, worst enemy.</li><br>
-
-              <li><b>What is your #1 pet peeve?</b><br>
-              When people talk over top of one another. </li><br>
-
-              <li><b>What song do you have completely memorized?</b><br>
-              Get Up 10 by Cardi B</li><br>
-
-              <li><b>What movie title best describes your life?</b><br>
-              Pursuit Of Happiness</li><br>
-
-              <li><b>What is the luckiest thing that has ever happened to you?</b><br>
-              I flipped a penny that was tails over to heads so someone else found a penny heads up and then I got a call from a make up brand and they flew me out to do a campaign photoshoot with them in New York City.</li><br>
-
-              <li><b>What’s the best compliment you’ve ever received?</b><br>
-              I am the most genuine soul someone has ever met.</li><br>
+              Create a narrative animated short film; code my portfolio site; be doing personal work on a daily basis; get into a healthy sleep and exercise lifestyle, finally.</li><br>
             </ul>
 
           </div>
